--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Highlights by HTML5 UP
 	html5up.net | @ajlkn
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Highlights by HTML5 UP</title>
+		<title>Austen's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,13 +18,14 @@
 
 		<!-- Header -->
 			<section id="header">
+                <span class="image fit primary"><img style ="opacity:0.6;"src="images/abstract-1616837_1920.jpg" /></span>
 				<header class="major">
-					<h1>Highlights</h1>
-					<p>A fun little { responsive } single pager by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1>austen</h1>
+					<p>perelman-hall</p>
 				</header>
 				<div class="container">
 					<ul class="actions">
-						<li><a href="#one" class="button special scrolly">Begin</a></li>
+						<li><a href="#one" class="button special scrolly">Bio</a></li>
 					</ul>
 				</div>
 			</section>
@@ -32,47 +33,63 @@
 		<!-- One -->
 			<section id="one" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
 					<div class="content">
-						<header class="major">
-							<h2>Who I am</h2>
-						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
-					</div>
-					<a href="#two" class="goto-next scrolly">Next</a>
-				</div>
+                        <header class="major">
+                            <h2>Hello World!</h2>
+                        </header>
+                        <img src="images/rsz_1backgroundpic.jpg" />
+                        <p><strong>My name is Austen and I am a recently certified Software Developer.</strong></p>
+                        <h1>past</h1>
+                        <p>After earning my B.S. in Marketing in 2014, I floated through the world of retail sales for two years, seeking a job that utilized my new degree.</p>
+                        <h1>present</h1>
+                        <p>I soon discovered that I did not want to simply sell these products, but be instrumental in the innovation, design, and creation of them! With this idea in mind, I enrolled in the We Can {Code} It Bootcamp. We Can {Code} It is a three month program that teaches full stack coding, focused on C# ASP.NET Web Development.</p>
+                        <h1>future</h1>
+                        <p>With these new skills in hand I am eager to hit the ground running! Learning is my #1 passion. I look forward to being a life-long student of technology. Aside from Tech and learning, I am passionate about culture, community, and soccer!</p>
+                    </div>
+                    <ul class="actions">
+                        <li><a href="#two" class="button special scrolly">Click Here for My Skills</a></li>
+                        <li><a href="#two" class="goto-next scrolly">Next</a></li>
+                    </ul>
+                </div>
 			</section>
 
 		<!-- Two -->
 			<section id="two" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="images/Blurry Matrix.jpg" /></span>
 					<div class="content">
-						<header class="major">
-							<h2>Stuff I do</h2>
-						</header>
-						<p>Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet vulputate.</p>
+                        <header class="major">
+                            <h2>My Technical Skill Set</h2>
+                        </header>
+                        <h1>Certified Software Engineer</h1>
 						<ul class="icons-grid">
 							<li>
-								<span class="icon major fa-camera-retro"></span>
-								<h3>Magna Etiam</h3>
-							</li>
-							<li>
-								<span class="icon major fa-pencil"></span>
-								<h3>Lorem Ipsum</h3>
+								<span class="icon major fa-desktop"></span>
+								<h3>Front End</h3>
+                                <p>JavaScript | jQuery | HTML5 | CSS3 | Bootstrap | Responsive Design/Mobile</p>
 							</li>
 							<li>
 								<span class="icon major fa-code"></span>
-								<h3>Nulla Tempus</h3>
+								<h3>Back End</h3>
+                                <p>C# | .NET | Active	Server	Pages/	ASP.net | MVC | Object Oriented	Programming (OOP)</p>
 							</li>
 							<li>
-								<span class="icon major fa-coffee"></span>
-								<h3>Sed Feugiat</h3>
+								<span class="icon major fa-database"></span>
+								<h3>Database</h3>
+                                <p>Structured Query Language (SQL) | Transactional	Databases/MSSQL</p>
+							</li>
+							<li>
+								<span class="icon major fa-github"></span>
+								<h3>Other</h3>
+                                <p>Source	Control/Git | Agile/Scrum Methodology</p>
 							</li>
 						</ul>
 					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
-				</div>
+                    <ul class="actions">
+                        <li><a href="#three" class="button special scrolly">Click Here for Projects</a></li>
+                        <li><a href="#three" class="goto-next scrolly">Next</a></li>
+                    </ul>
+                    </div>
 			</section>
 
 		<!-- Three -->
@@ -81,9 +98,9 @@
 					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>One more thing</h2>
+							<h2>Projects</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p>GitHub, LinkedIn, Email</p>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
