--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <div class="content">
                 <ul class="actions">
                     <li><a href="#one" class="button special scrolly">Bio</a></li>
+                    <li><a href="#two" class="button special scrolly">Skills</a></li>
+                    <li><a href="#three" class="button special scrolly">Projects</a></li>
+                    <li><a href="#footer" class="button special scrolly">Contact</a></li>
                 </ul>
                 <header class="major">
                     <h2>Hello World!</h2>
@@ -50,7 +53,10 @@
             </div>
             <span class="image fit primary"><img src="images/Blurry Matrix.jpg" /></span>
             <ul class="actions">
-                <li><a href="#two" class="button special scrolly">Click Here for My Skills</a></li>
+                <li><a href="#one" class="button special scrolly">Bio</a></li>
+                <li><a href="#two" class="button special scrolly">Skills</a></li>
+                <li><a href="#three" class="button special scrolly">Projects</a></li>
+                <li><a href="#footer" class="button special scrolly">Contact</a></li>
                 <li><a href="#two" class="goto-next scrolly">Next</a></li>
             </ul>
         </div>
@@ -89,7 +95,10 @@
                 </ul>
             </div>
             <ul class="actions">
-                <li><a href="#three" class="button special scrolly">Click Here for Projects</a></li>
+                <li><a href="#one" class="button special scrolly">Bio</a></li>
+                <li><a href="#two" class="button special scrolly">Skills</a></li>
+                <li><a href="#three" class="button special scrolly">Projects</a></li>
+                <li><a href="#footer" class="button special scrolly">Contact</a></li>
                 <li><a href="#three" class="goto-next scrolly">Next</a></li>
             </ul>
         </div>
@@ -122,7 +131,10 @@
                 <form><button type="submit" formaction="https://github.com/austenph/wardrobe">Check Out the Code! <span class="icon fa-github fa-2x"></span></button></form>
             </div>
             <ul class="actions">
-                <li><a href="#footer" class="button special scrolly">Let's Create Something!</a></li>
+                <li><a href="#one" class="button special scrolly">Bio</a></li>
+<li><a href="#two" class="button special scrolly">Skills</a></li>
+<li><a href="#three" class="button special scrolly">Projects</a></li>
+<li><a href="#footer" class="button special scrolly">Contact</a></li>
                 <li><a href="#footer" class="goto-next scrolly">Next</a></li>
             </ul>
         </div>
