one more change.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </section>
 
     <!-- One -->
-    <section id="one" class="main special">
+    <section class="main special">
         <div class="container">
             <div class="content">
                 <ul class="actions">
@@ -43,7 +43,7 @@
                     <h2>Hello World!</h2>
                 </header>
                 <img src="images/rsz_1backgroundpic.jpg" />
-                <p><strong>My name is Austen and I am a recently certified Software Developer.</strong></p>
+                <p id="one"><strong>My name is Austen and I am a recently certified Software Developer.</strong></pid="one">
                 <h1>past</h1>
                 <p>After earning my B.S. in Marketing in 2014, I floated through the world of retail sales for two years, seeking a job that utilized my new degree.</p>
                 <h1>present</h1>
