--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <p>perelman-hall</p>
         </header>
         <ul class="actions">
-            <li><a href="#one" class="goto-next scrolly">Next</a></li>
+            <li><a href="#first" class="goto-next scrolly">Next</a></li>
         </ul>
     </section>
 
     <!-- One -->
-    <section class="main special">
+    <section id="#first" class="main special">
         <div class="container">
             <div class="content">
                 <ul class="actions">
