--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
             <p>perelman-hall</p>
         </header>
         <ul class="actions">
-            <li><a href="#first" class="goto-next scrolly">Next</a></li>
+            <li><a href="#one" class="goto-next scrolly">Next</a></li>
         </ul>
     </section>
 
     <!-- One -->
-    <section id="#first" class="main special">
+    <section id="#one" class="main special">
         <div class="container">
             <div class="content">
                 <ul class="actions">
-                    <li><a href="#one" class="button special scrolly">Bio</a></li>
-                    <li><a href="#two" class="button special scrolly">Skills</a></li>
-                    <li><a href="#three" class="button special scrolly">Projects</a></li>
+                    <li><a href="#two" class="button special scrolly">Bio</a></li>
+                    <li><a href="#three" class="button special scrolly">Skills</a></li>
+                    <li><a href="#four" class="button special scrolly">Projects</a></li>
                     <li><a href="#footer" class="button special scrolly">Contact</a></li>
                 </ul>
                 <header class="major">
                     <h2>Hello World!</h2>
                 </header>
                 <img src="images/rsz_1backgroundpic.jpg" />
-                <p id="one"><strong>My name is Austen and I am a recently certified Software Developer.</strong></pid="one">
+                <p id="two"><strong>My name is Austen and I am a recently certified Software Developer.</strong></pid="one">
                 <h1>past</h1>
                 <p>After earning my B.S. in Marketing in 2014, I floated through the world of retail sales for two years, seeking a job that utilized my new degree.</p>
                 <h1>present</h1>
@@ -53,17 +53,17 @@
             </div>
             <span class="image fit primary"><img src="images/Blurry Matrix.jpg" /></span>
             <ul class="actions">
-                <li><a href="#one" class="button special scrolly">Bio</a></li>
-                <li><a href="#two" class="button special scrolly">Skills</a></li>
-                <li><a href="#three" class="button special scrolly">Projects</a></li>
+                <li><a href="#two" class="button special scrolly">Bio</a></li>
+                <li><a href="#three" class="button special scrolly">Skills</a></li>
+                <li><a href="#four" class="button special scrolly">Projects</a></li>
                 <li><a href="#footer" class="button special scrolly">Contact</a></li>
-                <li><a href="#two" class="goto-next scrolly">Next</a></li>
+                <li><a href="#three" class="goto-next scrolly">Next</a></li>
             </ul>
         </div>
     </section>
 
     <!-- Two -->
-    <section id="two" class="main special">
+    <section id="three" class="main special">
         <div class="container">
             <span class="image fit primary"><img src="images/Blurry Matrix.jpg" /></span>
             <div class="content">
@@ -95,17 +95,17 @@
                 </ul>
             </div>
             <ul class="actions">
-                <li><a href="#one" class="button special scrolly">Bio</a></li>
-                <li><a href="#two" class="button special scrolly">Skills</a></li>
-                <li><a href="#three" class="button special scrolly">Projects</a></li>
+                <li><a href="#two" class="button special scrolly">Bio</a></li>
+                <li><a href="#three" class="button special scrolly">Skills</a></li>
+                <li><a href="#four" class="button special scrolly">Projects</a></li>
                 <li><a href="#footer" class="button special scrolly">Contact</a></li>
-                <li><a href="#three" class="goto-next scrolly">Next</a></li>
+                <li><a href="#four" class="goto-next scrolly">Next</a></li>
             </ul>
         </div>
     </section>
 
     <!-- Three -->
-    <section id="three" class="main special">
+    <section id="four" class="main special">
         <div class="container">
             <span class="image fit primary"><img src="images/virtual-reality-1802469_1920.jpg" /></span>
             <div class="content">
@@ -131,10 +131,10 @@
                 <form><button type="submit" formaction="https://github.com/austenph/wardrobe">Check Out the Code! <span class="icon fa-github fa-2x"></span></button></form>
             </div>
             <ul class="actions">
-                <li><a href="#one" class="button special scrolly">Bio</a></li>
-<li><a href="#two" class="button special scrolly">Skills</a></li>
-<li><a href="#three" class="button special scrolly">Projects</a></li>
-<li><a href="#footer" class="button special scrolly">Contact</a></li>
+                <li><a href="#two" class="button special scrolly">Bio</a></li>
+                <li><a href="#three" class="button special scrolly">Skills</a></li>
+                <li><a href="#four" class="button special scrolly">Projects</a></li>
+                <li><a href="#footer" class="button special scrolly">Contact</a></li>
                 <li><a href="#footer" class="goto-next scrolly">Next</a></li>
             </ul>
         </div>
