finish adjusting navbar

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </section>
 
     <!-- One -->
-    <section id="#one" class="main special">
+    <section id="one" class="main special">
         <div class="container">
             <div class="content">
                 <ul class="actions">
